--- a/extension/popup.html
+++ b/extension/popup.html
@@ -65,7 +65,7 @@ input:checked + .slider:before {
 </head>
 
 <body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="jquery-3.3.1.min.js"></script>
 <script>
 $(document).ready(function(){
 	var switchStatus = false;
@@ -90,7 +90,8 @@ $(document).ready(function(){
 
 </script>
 
-<p> <b>Active</b>  / <b>Deactive extension</p>
+<center><b>Enabled</b></center>
+</br>
 <label class="switch" >
   <input type="checkbox" id="togBtn" value="false">
   <span class="slider round"></span>
